Archive2/05/4e1fab4db407ed/output
main.cpp:7:5: error: class definition may not be declared a friend
     friend class FriendClass{}; //error
     ^
